// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarEntity /> should render a avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="medium"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <class_1
      color="#424F5C"
      isInline={false}
    >
      John Wick
    </class_1>
    <styled.span
      isCompact={false}
    >
      <class_1
        color="#667380"
        isInline={false}
        isTruncated={true}
        type="xsmall"
      >
        Guy Killer
      </class_1>
    </styled.span>
    <class_1
      color="#667380"
      isInline={false}
      isTruncated={true}
      type="xsmall"
      weight="heavy"
    >
      In Cinemas 2019
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="medium"
    />
  </styled.div>
  <styled.div>
    <class_1
      color="#424F5C"
      isInline={false}
    >
      John Wick
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a basic compact avatar entity 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      initials="JW"
      size="small"
    />
  </styled.div>
  <styled.div>
    <class_1
      color="#424F5C"
      isInline={true}
    >
      John Wick
    </class_1>
  </styled.div>
</styled.div>
`;

exports[`<AvatarEntity /> should render a compact avatar entity with lots of data 1`] = `
<styled.div
  className="avatar-entity"
  isHoverable={false}
>
  <styled.div>
    <Avatar
      imageUrl="www.example.com"
      initials="JW"
      size="small"
      statusDot="primary"
    />
  </styled.div>
  <styled.div>
    <class_1
      color="#424F5C"
      isInline={true}
    >
      John Wick
    </class_1>
    <styled.span
      isCompact={true}
    >
      <class_1
        color="#667380"
        isInline={true}
        isTruncated={true}
        type="xsmall"
      >
        (Guy Killer)
      </class_1>
    </styled.span>
  </styled.div>
</styled.div>
`;
